--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,15 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
+#loading-bar {
+  position: fixed;
+  width: 100%;
+  height: 3px;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  background-color: #007bff;
+}
 
 .App-header {
   background-color: #282c34;
